--- a/index.html
+++ b/index.html
@@ -17,30 +17,67 @@
 
         <div class="header">
 
-        	<!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+            <!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+            <input type="button" id="signUpBtn" class="topBtn" onclick="" value="Sign Up">
+            <input type="button" id="signInBtn" class="topBtn" onclick="" value="Sign In">
+            <a href="index.html" id="pageTitle" class="logo-title">ScriBBler</a>
+            <p class="subText">Explore. Imagine. Create</p>
 
         </div>
            
         <div class="postButtons">
 
         	<!-- Insert code for All Posts & Create Post button here -->
+            <input type="button" id="allPost" class="middleBtn" onclick="" value="All Posts">
+            <input type="button" id="createPost" class="middleBtn" onclick="" value="Create Post">
 
         </div>
     </div>
 
-    <div>
+    <div id="signInModal" class="modal">
 
     	<!-- Insert code for Sign In modal here -->
+        <form class="modal-content">
+            <div class="container">
+                <h1>Welcome Back</h1>
+                <hr>
+                <label for="uname" class="label">
+                    <b>Username</b>
+                </label>
+                <input type="text" name="uname" placeholder="Enter Username" required>
+                <label for="pswd" class="label">
+                    <b>Password</b>
+                </label>
+                <input type="password" name="pswd" placeholder="Enter Password" required>
+            </div>
+        </form>
 
     </div>
 
-    <div>
+    <div id="signUpModal" class="modal">
 
     	<!-- Insert code for Sign Up modal here -->
-
+        <div class="container">
+            <form action="#" class="modal-content-signup">
+                <div class="container-signup">
+                        <h1>Get Started</h1>
+                        <hr>
+                        <label for="fname" class="label">Full Name</label>
+                        <input type="text" name="fname" placeholder="Enter Full Name" required>
+                        <label for="uname" class="label">Username</label>
+                        <input type="text" name="uname" placeholder="Enter Username" required>
+                        <label for="pswd" class="label">Password</label>
+                        <input type="password" name="pswd" placeholder="Enter Password" required>
+                        <label for="pswdRpt" class="label">Confirm Password</label>
+                        <input type="password" name="pswdrpt" placeholder="Confirm Password" required>
+                        <button type="submit" class="signUpBtn">Sign Up</button>
+                        <button type="submit" class="cancelBtn">Cancel</button>
+                </div>
+            </form>
+        </div>
     </div>
 
-    <div>
+    <div id="newPostModal" class="newPostBox">
 
     	<!-- Insert code for Create Post modal here -->
 
