--- a/html/post.html
+++ b/html/post.html
@@ -10,8 +10,8 @@
 
 <body>
         <div class="header">
-            <input type="button" value="Sign Up" onclick="signUp()" id="signUpBtn" class="signButton">
-            <input type="button" value="Sign In" onclick="SignIn()" id="signIn" class="signButton">
+            <input type="button" value="Sign Up" onclick="SignUp()" id="signUp" class="signBtn">
+            <input type="button" value="Sign In" onclick="SignIn()" id="signIn" class="signBtn">
             <a class="logo-title" id="pageTitle" href="..\index.html">ScriBBler</a>
             <p class="logo-text">Explore, Imagine, Create</p>
             </div>
@@ -35,17 +35,17 @@
                             <button type="submit" class="signinbtn">Sign In</button>
                         </div>
                     </div>
-                    <div id="signUpBtnPrompt" class="signUpBtnForm">Not a member?
-                        <span id="" class="signUpBtn" onclick="signUp()">Sign Up</span>
+                    <div id="signUpPrompt" class="signUpForm">Not a member?
+                        <span id="" class="signUp" onclick="SignUp()">Sign Up</span>
                     </div>
                 </form>
             </div>
         
-            <div id="signUpBtnModal" class="modal">
+            <div id="signUpModal" class="modal">
                 <div class="modal-content-sigup">
                     <span onclick="onCloseModalClicked()" class="close" title="Close Modal">&times;</span>
                     <form class="modal-content-sigUp">
-                        <div class="container-signUpBtn">
+                        <div class="container-signUp">
         
                             <h1>Get Started</h1>
                             <hr>
@@ -58,7 +58,7 @@
                             <label for="psw-repeat" class="label">Confirm Password</label>
                             <input type="password" placeholder="Confirm Password" name="psw-repeat" required>
                             <div class="clearfix">
-                                    <button type="submit" class="signUpBtnbtn">Sign Up</button>
+                                    <button type="submit" class="signupbtn">Sign Up</button>
                                 <button type="button" class="cancelbtn">Clear</button>
                             </div>
                         </div>
