--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
         <div class="header">
         	<!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
-            <input type="button" value="Sign Up" onclick="SignUp()" id="signUp" class="signButton">
-            <input type="button" value="Sign In" onclick="SignIn()" id="signIn" class="signButton">
+            <input type="button" value="Sign Up" onclick="SignUp()" id="signUp" class="signBtn">
+            <input type="button" value="Sign In" onclick="SignIn()" id="signIn" class="signBtn">
             <a class="logo-title" id="pageTitle">ScriBBler</a>
             <p class="logo-text">Explore, Imagine, Create</p>
         </div>
            
         <div class="postButtons">
         	<!-- Insert code for All Posts & Create Post button here -->
-            <input type="button" id="allPosts" class="postButton-1" onclick="allPosts()" value="All Posts">
-            <input type="button" id="newPosts" class="postButton-1" onclick="newPosts()" value="Create Post">
+            <input type="button" id="allPosts" class="postBtn1" onclick="allPosts()" value="All Posts">
+            <input type="button" id="newPosts" class="postBtn1" onclick="newPosts()" value="Create Post">
 
         </div>
     </div>
